<resources>
    <string name="app_name">روبو ریموت</string>
    <string name="left_arrow">جهت چپ</string>
    <string name="up_arrow">جهت بالا</string>
    <string name="right_arrow">جهت راست</string>
    <string name="down_arrow">جهت پایین</string>
    <string name="connection_state_unknown">وضعیت اتصال: نامعلوم</string>
    <string name="connection_state_connected">وضعیت اتصال: متصل</string>
    <string name="connection_state_problem">وضعیت اتصال: اختلال</string>
    <string name="one_shot_gun">تفنگ تک تیر</string>
    <string name="rapid_gun">تفنگ رگبار</string>
    <string name="toggle_gun">تفنگ ثابت</string>
    <string name="new_wifi_name">نام جدید وای فای</string>
    <string name="new_wifi_pass">رمز جدید وای فای</string>
    <string name="new_wifi_pass_again">تکرار رمز جدید وای فای</string>
    <string name="battery_voltage">ولتاژ باتری موتور: نامعلوم</string>
    <string name="wifi_dialog_title">خطا در اتصال</string>
    <string name="wifi_dialog_message">از متصل بودن وای فای به ماژول اطمینان حاصل نمایید.</string>
    <string name="dialog_btn_confirm">تایید</string>
    <string name="dialog_btn_save">ذخیره</string>
    <string name="dialog_btn_cancel">لغو</string>
    <string name="success_dialog_title">ثبت با موفقیت</string>
    <string name="success_dialog_message">اطلاعات جدید با موفقیت در ریموت ثبت گردید.</string>
    <string name="success_dialog_message2">تنظیمات جدید رله با موفقیت ذخیره شد.</string>
    <string name="fail_dialog_title">خطا در ثبت</string>
    <string name="fail_dialog_message">خطایی رخ داده است. لطفا مجددا تلاش نمایید.</string>
    <string name="progress_dialog_title">لطفا منتظر بمانید…</string>
    <string name="wifi_settings">تنظیمات وای فای</string>
    <string name="relays_settings">تنظیمات رله ها</string>
    <string name="change_wifi_password">تغییر رمز عبور وای فای</string>
    <string name="board_guide">راهنمای برد</string>
    <string name="about_us">درباره سازنده</string>
    <string name="version_number">نسخه 1.0</string>
    <string name="change_wifi_name">تغییر نام وای فای</string>
    <string name="relay1_settings">تنظیمات رله اول</string>
    <string name="relay2_settings">تنظیمات رله دوم</string>
    <string name="relay3_settings">تنظیمات رله سوم</string>
    <string name="relay_new_name">نام رله</string>
    <string name="single_shot_type">حالت تک تیر</string>
    <string name="multi_shot_type">حالت رگبار</string>
    <string name="switch_type">حالت سوییچ</string>
    <string name="app_intro_done_button">تایید</string>
    <string name="saw_intro_key">false</string>
    <string name="about_us_email">ایمیل: mohsen2766@gmail.com</string>
    <string name="about_us_number">شماره تماس: 09373463357</string>
    <string name="about_us_telegram">تلگرام: mohsenfakhrabadi@</string>
    <string name="about_us_company">گروه الکترونیک و رباتیک آساتیک</string>
    <string name="about_us_description">ضمن قدردانی و سپاس از انتخاب محصول گروه آساتیک جهت انجام کلیه پروژه های رباتیک ، اپلیکیشن وب و موبایل از طریق پل های ارتباطی زیر با ما ارتباط برقرار نمایید.</string>
    <string name="about_us_version_number">1.0.0</string>
    <string name="about_us_version">ورژن</string>
    <string name="about_us_title">روبو ریموت</string>
    <string name="motor_battery_voltage">"ولتاژ باتری موتور: "</string>
    <string name="volt">" ولت"</string>

    <string name="intro1_title">معرفی نرم افزار</string>
    <string name="intro1_description">"اپلیکیشن کنترل ربات که از طریق وای فای و با استفاده از کیت "روبو وای فای" امکان کنترل ربات شما را فراهم می سازد.
        به دنیای رباتیک خوش آمدید!\n"
    </string>
    <string name="intro2_title">معرفی برد</string>
    <string name="intro2_description">جهت استفاده از این نرم افزار نیازمند کیت کنترل ربات ما هستید.
        این کیت قابلیت کنترل دو موتور با حداکثر جریان 15 آمپر و سه سلاح با حدکثر جریان 10 آمپر را دارد.
    </string>
    <string name="intro3_title">تهیه برد</string>
    <string name="intro3_description">جهت کسب اطلاعات بیشتر و یا تهیه برد کافیست با شماره 09373463357 تماس حاصل نمایید.</string>
    <string name="intro4_title">توضیحات تکمیلی</string>
    <string name="intro4_description">"جهت آشنایی بیشتر با برد و روش استفاده از آن از صفحه تنظیمات گزینه راهنمای استفاده از برد را انتخاب نمایید.
        از نرم افزار لذت ببرید.\n"
    </string>

    <string name="relays_description_guide">هرکدام از رله ها قابلیت جریان دهی حداکثر 20 آمپر را دارا می باشند. هر رله قابلیت تنظیم نوع کارکرد را به صورت "تک تیر" ، "رگبار" و "سوییچ" دارد که در تنظیمات نرم افزار قابل انتخاب است. در حالت پیش فرض رله اول به صورت "تک تیر" ، رله دوم به صورت "رگبار" و رله سوم به صورت "سوییچ" می باشد.</string>
    <string name="reset_button_guide">"در صورت فراموشی پسورد برد شما با نگه داشتن دکمه به مدت 5 ثانیه می توانید نام و رمز عبور اتصال را به حالت پیشفرض تغییر دهید.
نام پیشفرض وای فای :    RoboWifi1
رمز عبور پیشفرض وای فای:   asakrobatic
"   </string>
    <string name="potenciometer_guide">با استفاده از این پتانسومتر می توانید میزان ولتاژ نمایش باتری موتور در نرم افزار را کالیبره نمایید.</string>
    <string name="faq_answer1">"علت : عدم اتصال باتری – جابجا زدن سیم های باتری به مدار – ولتاژ کمتر از 7 ولت
عیب یابی: بررسی اتصال باتری به مدار – جابجا کردن سیم های ورودی تغذیه مدار – اندازه گیری میزان ولتاژ باتری"</string>
    <string name="faq_answer2">"علت: ولتاژ باتری کمتر از 7 ولت می باشد
عیب یابی: اعمال ولتاژ بیشتر از 7 ولت به مدار"</string>
    <string name="faq_answer3">"عیب یابی: نگه داشتن دکمه ریست به مدت 5 ثانیه"</string>
    <string name="faq_answer4">"علت: عدم اتصال باتری موتور
عیب یابی: اتصال درست سیم ها به کانکتور وردی ولتاژ موتورها به صورتی که Led مجاور روشن شود"</string>
    <string name="faq_answer5">"علت: استفاده از ولتاژ نامناسب برای موتورها – کاهش میزان شارژ باتری های موتور
عیب یابی: استفاده از ولتاژ مناسب برای موتورها – شارژ باتری های موتور"</string>
    <string name="faq_answer6">"علت: اتصال اشتباه ورودی موتورها
عیب یابی: جابجایی ورودی موتورها"</string>
    <string name="faq_answer7">"علت: موتور چپ و راست جابجا متصل شده اند
عیب یابی: جابجایی خروجی موتور چپ و راست"</string>
    <string name="faq_answer8">"علت: وصل بودن جامپر J8 – عدم صحت رمزعبور وای فای
عیب یابی: عدم اتصال جامپرJ8 – اطمینان از صحت رمزعبور و در صورت فراموشی نگه داشتن دکمه ریست برای مدت 5 ثانیه که نام و رمزعبور وای فای را به حالت پیشفرض خواهد برد"</string>

</resources>
