<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ma_root_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".views.MainActivity">

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/ma_jsv_joystick"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@drawable/joystick_bg"
        app:JV_autoReCenterButton="true"
        app:JV_buttonImage="@drawable/joystick_roller"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        custom:JV_borderWidth="0dp"
        custom:JV_buttonSizeRatio="19%"
        custom:JV_fixedCenter="false" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/ma_btn_gun1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/ma_btn_gun2"
        app:layout_constraintEnd_toEndOf="@+id/ma_tv_connectionState"
        app:layout_constraintStart_toStartOf="@+id/ma_tv_connectionState"
        app:layout_constraintTop_toBottomOf="@+id/ma_tv_batteryVoltage"
        app:nb_backgroundColor="@color/dark_red_color"
        app:nb_borderColor="@color/white_color"
        app:nb_borderWidth="2dp"
        app:nb_focusColor="@color/white_color"
        app:nb_radius="25dp"
        app:nb_text="@string/one_shot_gun"
        app:nb_textColor="@color/white_color"
        app:nb_textSize="19sp" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/ma_btn_gun2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/ma_btn_gun3"
        app:layout_constraintEnd_toEndOf="@+id/ma_btn_gun1"
        app:layout_constraintStart_toStartOf="@+id/ma_btn_gun1"
        app:layout_constraintTop_toBottomOf="@+id/ma_btn_gun1"
        app:nb_backgroundColor="@color/dark_red_color"
        app:nb_borderColor="@color/white_color"
        app:nb_borderWidth="2dp"
        app:nb_focusColor="@color/white_color"
        app:nb_radius="25dp"
        app:nb_text="@string/rapid_gun"
        app:nb_textColor="@color/white_color"
        app:nb_textSize="19sp" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/ma_btn_gun3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/ma_tv_connectionState"
        app:layout_constraintEnd_toEndOf="@+id/ma_btn_gun1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ma_btn_gun1"
        app:layout_constraintTop_toBottomOf="@+id/ma_btn_gun2"
        app:nb_backgroundColor="@color/dark_red_color"
        app:nb_borderColor="@color/white_color"
        app:nb_borderWidth="2dp"
        app:nb_focusColor="@color/white_color"
        app:nb_radius="25dp"
        app:nb_text="@string/toggle_gun"
        app:nb_textColor="@color/white_color"
        app:nb_textSize="19sp" />

    <TextView
        android:id="@+id/ma_tv_connectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_state_unknown"
        android:textColor="@color/white_color"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_btn_gun3" />

    <TextView
        android:id="@+id/ma_tv_batteryVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/battery_voltage"
        android:textColor="@color/white_color"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ma_btn_gun1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ma_btn_settings"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>