<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/wnd_et_newName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/new_wifi_name"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:textDirection="rtl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:met_baseColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_floatingLabelTextSize="20sp"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/colorAccent"
        app:met_textColorHint="@color/colorAccent" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/wnd_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wnd_btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/wnd_et_newName"
        app:layout_constraintVertical_bias="0.14"
        app:nb_backgroundColor="@color/colorAccent"
        app:nb_borderColor="@color/white_color"
        app:nb_borderWidth="2dp"
        app:nb_focusColor="@color/grey_30"
        app:nb_radius="10dp"
        app:nb_text="@string/dialog_btn_save"
        app:nb_textColor="@color/white_color"
        app:nb_textSize="20sp" />

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/wnd_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/wnd_btn_submit"
        app:layout_constraintEnd_toStartOf="@+id/wnd_btn_submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wnd_btn_submit"
        app:nb_backgroundColor="@color/red_color"
        app:nb_borderColor="@color/white_color"
        app:nb_borderWidth="2dp"
        app:nb_focusColor="@color/grey_30"
        app:nb_radius="10dp"
        app:nb_text="@string/dialog_btn_cancel"
        app:nb_textColor="@color/white_color"
        app:nb_textSize="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>